<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/FontSize"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerFS"
        android:entries="@array/FontSize"
        android:focusable="false"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="181dp"
        android:layout_marginStart="181dp" />

    <TextView
        android:id="@+id/changeFontTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_Font_Color"
        android:textSize="18sp"
        android:layout_below="@+id/spinnerFS"
      />
    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/ColorFont"
        android:layout_below="@+id/spinnerFS"
        android:layout_alignLeft="@+id/spinnerBack"
        android:layout_alignStart="@+id/spinnerBack" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerColor"
        android:text="@string/ChangeBackgroundColor"
        android:textSize="18sp" />
    <Spinner
        android:id="@+id/spinnerBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/ColorBack"
        android:layout_below="@+id/spinnerColor"
        android:layout_alignLeft="@+id/spinnerFS"
        android:layout_alignStart="@+id/spinnerFS" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerBack"
        android:text="@string/ChangeFont"
        android:textSize="18sp"
         />
    <Spinner
        android:id="@+id/spinnerFontFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/FontStyle"
        android:layout_below="@+id/spinnerBack"
        android:layout_alignLeft="@+id/spinnerBack"
        android:layout_alignStart="@+id/spinnerBack" />

    <Button
        android:id="@+id/buttonDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerFontFamily"
        android:text="@string/DefaultSettings" />

</RelativeLayout>

